# tree-sitter-fasta

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  tree-sitter.yaml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-fasta.pc.in
bindings/c/tree_sitter/: tree-sitter-fasta.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fasta/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFastaTests/: TreeSitterFastaTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: descriptions.txt  ids.txt  records.txt  sequences.txt
