[package]
name = "tree-sitter-fasta"
description = "Fasta file parser"
version = "1.0.8"
authors = ["Will Gebbie <will.gebbie777@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fasta"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/will-gebbie/tree-sitter-fasta"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
